# dspy-explorer

./: .gitignore  CLAUDE.md  README.md  build.ts  package-lock.json  package.json  pyproject.toml  tsconfig.json
.github/workflows/: deploy-pages.yml
scripts/: record_traces.py
shinylive-app/: app.py  shinyreact.py  trace_data.py
shinylive-app/data/runs/: dspy-rlm-run-1.json  dspy-rlm-run-2.json
src/dspy_explorer/: __init__.py  __main__.py  app.py  cli.py  dspy_live.py
src/dspy_explorer/data/runs/: dspy-rlm-run-1.json  dspy-rlm-run-2.json  dspy-rlm-run-3.json
srcts/: globals.css  main.tsx
srcts/components/: App.tsx  CodeBlock.tsx  ConceptCallout.tsx  ContextPanel.tsx  Header.tsx  IntroPanel.tsx  IterationCard.tsx  LiveModePanel.tsx  OutputBlock.tsx  PhaseTimeline.tsx  PlaybackControls.tsx  REPLTimeline.tsx  RunComparison.tsx  TokenBudget.tsx  ToolkitPanel.tsx
srcts/hooks/: usePhaseDetection.ts  usePlayback.ts
srcts/lib/: phases.ts  types.ts  utils.ts
